# TP-tasks

./: README.md
task2/: CMakeLists.txt  README.md
task2/A/: preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: main.cpp  main.h  main_test.cpp  test.cpp
